tests/baselines/reference/functionExpressionInWithBlock.errors.txt
==== tests/cases/compiler/functionExpressionInWithBlock.ts (1 errors) ====
    function x() {
     with({}) {
          ~~
!!! functionExpressionInWithBlock.ts(2,7): error TS2135: All symbols within a with block will be resolved to 'any'.
      function f() {
       () => this;
      }
     }
    }